[gd_scene load_steps=42 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/investigation_v3.gd" type="Script" id=2]
[ext_resource path="res://sprites/crosshair/uninvestigated.png" type="Texture" id=3]
[ext_resource path="res://sprites/crosshair/investigated.png" type="Texture" id=4]
[ext_resource path="res://sprites/crosshair/nothing.png" type="Texture" id=5]
[ext_resource path="res://sprites/evidence/branch_big.png" type="Texture" id=6]
[ext_resource path="res://sprites/evidence/badge.png" type="Texture" id=7]
[ext_resource path="res://sprites/evidence/badge_big.png" type="Texture" id=8]
[ext_resource path="res://sprites/evidence/body.png" type="Texture" id=9]
[ext_resource path="res://sounds/fanfare_newev.ogg" type="AudioStream" id=10]
[ext_resource path="res://sprites/evidence/body_big.png" type="Texture" id=11]
[ext_resource path="res://sprites/evidence/branch.png" type="Texture" id=12]
[ext_resource path="res://sprites/evidence/knucklebuster_big.png" type="Texture" id=13]
[ext_resource path="res://sprites/evidence/autopsy_big.png" type="Texture" id=14]
[ext_resource path="res://sprites/evidence/knucklebuster.png" type="Texture" id=15]
[ext_resource path="res://sprites/evidence/autopsy.png" type="Texture" id=16]
[ext_resource path="res://sprites/evidence/grafin.png" type="Texture" id=17]
[ext_resource path="res://sprites/evidence/footage.png" type="Texture" id=18]
[ext_resource path="res://sprites/record_cell.png" type="Texture" id=19]
[ext_resource path="res://sprites/evidence/grafin_big.png" type="Texture" id=20]
[ext_resource path="res://sprites/evidence/money.png" type="Texture" id=21]
[ext_resource path="res://sprites/evidence/money_big.png" type="Texture" id=22]
[ext_resource path="res://sprites/evidence/halal.png" type="Texture" id=23]
[ext_resource path="res://sprites/evidence/halal_big.png" type="Texture" id=24]
[ext_resource path="res://sprites/evidence/affidavit.png" type="Texture" id=25]
[ext_resource path="res://sprites/evidence/affidavit_big.png" type="Texture" id=26]
[ext_resource path="res://sprites/evidence/cig.png" type="Texture" id=27]
[ext_resource path="res://sprites/evidence/cig_big.png" type="Texture" id=28]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 3

[sub_resource type="DynamicFont" id=3]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "gotchu",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "wut",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 3

[sub_resource type="SpriteFrames" id=6]
resource_name = "EvidenceSpFr"
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "body",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "branch",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "money",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "aff",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "grafin",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "footage",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "report",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "aff2",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "hijab",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "cig",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "knucklebuster",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "badge",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 3

[sub_resource type="DynamicFont" id=8]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "body",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "branch",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "money",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "aff",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "grafin",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "report",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "aff2",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "hijab",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "cig",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "knucklebuster",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "badge",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.54902, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = 486.0
margin_right = 1050.0
margin_bottom = 650.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Label" parent="BG"]
margin_left = 36.0
margin_top = 10.0
margin_right = 879.0
margin_bottom = 104.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_color" type="ColorRect" parent="BG"]
material = SubResource( 2 )
margin_left = 36.0
margin_top = 10.0
margin_right = 879.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 863.0
margin_top = 486.0
margin_right = 1024.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 3 )
text = "Дальше"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
visible = false
margin_left = 863.0
margin_top = 434.0
margin_right = 1024.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 3 )
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowCourtRecord" type="Button" parent="."]
margin_left = 747.0
margin_right = 1024.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "Записи суда"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestigationButtons" type="HBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 149.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Investigate" type="Button" parent="InvestigationButtons"]
margin_left = 65.0
margin_right = 293.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Осмотреть"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="Button" parent="InvestigationButtons"]
margin_left = 343.0
margin_right = 547.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Разговор"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Present" type="Button" parent="InvestigationButtons"]
margin_left = 597.0
margin_right = 801.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Показать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="InvestigationButtons"]
margin_left = 851.0
margin_right = 959.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Уйти"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 118.092, 233.755 )
scale = Vector2( 0.618163, 0.618163 )
frames = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -17.479

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.175

[node name="update" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="show_cell" type="Sprite" parent="."]
visible = false
position = Vector2( 76.1216, 412.092 )
scale = Vector2( 1.72501, 1.72501 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="color" type="ColorRect" parent="show_cell"]
material = SubResource( 5 )
anchor_top = -0.006
margin_left = -41.0
margin_top = -39.526
margin_right = 41.0
margin_bottom = 40.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evidence" type="AnimatedSprite" parent="show_cell"]
position = Vector2( -0.286477, -0.441175 )
scale = Vector2( 0.817042, 0.817042 )
frames = SubResource( 6 )

[node name="CourtRecord" type="Node2D" parent="."]
visible = false

[node name="BG" type="ColorRect" parent="CourtRecord"]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell1" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -190.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell2" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 96.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -270.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell3" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 176.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -350.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell4" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 256.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -430.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell5" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 16.0
margin_top = 96.0
margin_right = 80.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -190.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell6" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 96.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -270.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell7" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 176.0
margin_top = 96.0
margin_right = 240.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -350.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell8" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 256.0
margin_top = 96.0
margin_right = 320.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -430.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell9" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 16.0
margin_top = 176.0
margin_right = 80.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( -190.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell10" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 96.0
margin_top = 176.0
margin_right = 160.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( -270.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell11" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 176.0
margin_top = 176.0
margin_right = 240.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( -350.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell12" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 256.0
margin_top = 176.0
margin_right = 320.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( -430.863, 72 )
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentBG" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 16.0
margin_top = 256.0
margin_right = 160.0
margin_bottom = 320.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandBG" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 176.0
margin_top = 256.0
margin_right = 320.0
margin_bottom = 320.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportBG" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 336.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 160.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBG" type="ColorRect" parent="CourtRecord/BG"]
margin_left = 336.0
margin_top = 176.0
margin_right = 624.0
margin_bottom = 320.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandBG2" type="ColorRect" parent="CourtRecord/BG"]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0.831373, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOverlay" type="ColorRect" parent="CourtRecord"]
material = SubResource( 7 )
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 400.0
color = Color( 0.5, 1, 0.5, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cells" type="Node2D" parent="CourtRecord"]

[node name="Image1" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 240.604, 112.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image2" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 320, 112 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image3" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 400, 112 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image4" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 480, 112 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image5" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 240.896, 193 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image6" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 320.293, 192.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image7" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 400.293, 192.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image8" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 480.293, 192.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image9" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 240.896, 273 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image10" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 320.293, 272.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image11" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 400.293, 272.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Image12" type="AnimatedSprite" parent="CourtRecord/Cells"]
position = Vector2( 480.293, 272.5 )
scale = Vector2( 0.792683, 0.792683 )
frames = SubResource( 6 )

[node name="Present" type="Button" parent="CourtRecord"]
visible = false
margin_left = 208.0
margin_top = 320.0
margin_right = 352.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 8 )
text = "Показать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check" type="Button" parent="CourtRecord"]
margin_left = 368.0
margin_top = 320.0
margin_right = 512.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 8 )
text = "Прочесть"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="AnimatedSprite" parent="CourtRecord"]
position = Vector2( 671.371, 148.25 )
scale = Vector2( 0.774286, 0.774286 )
frames = SubResource( 9 )

[node name="Desc" type="Label" parent="CourtRecord"]
margin_left = 536.0
margin_top = 280.0
margin_right = 808.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 10 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CourtRecord"]
margin_left = 536.0
margin_top = 248.0
margin_right = 808.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 10 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expand" type="Label" parent="CourtRecord"]
visible = false
margin_left = 216.0
margin_top = 88.0
margin_right = 504.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 10 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 168.0
margin_right = 293.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="Choices"]
margin_right = 229.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Choice2" type="Button" parent="Choices"]
visible = false
margin_top = 43.0
margin_right = 229.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Choice3" type="Button" parent="Choices"]
visible = false
margin_top = 86.0
margin_right = 229.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Choice4" type="Button" parent="Choices"]
visible = false
margin_top = 129.0
margin_right = 229.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Chat" type="VBoxContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 168.0
margin_right = 293.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat1" type="Button" parent="Chat"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Chat2" type="Button" parent="Chat"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Chat3" type="Button" parent="Chat"]
visible = false
margin_top = 43.0
margin_right = 228.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Chat4" type="Button" parent="Chat"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Moves" type="VBoxContainer" parent="."]
visible = false
margin_left = 64.0
margin_top = 168.0
margin_right = 293.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move1" type="Button" parent="Moves"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Move2" type="Button" parent="Moves"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Move3" type="Button" parent="Moves"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="Move4" type="Button" parent="Moves"]
visible = false
margin_right = 228.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Tes ФЫВ"

[node name="First" type="Timer" parent="."]
wait_time = 0.125
one_shot = true
autostart = true

[node name="ArcBG" type="Panel" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ArcBG"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 13 )
text = "Арка"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ShowCourtRecord" to="." method="_on_ShowCourtRecord_pressed"]
[connection signal="pressed" from="InvestigationButtons/Investigate" to="." method="_on_Investigate_pressed"]
[connection signal="pressed" from="InvestigationButtons/Chat" to="." method="_on_Chat_pressed"]
[connection signal="pressed" from="InvestigationButtons/Present" to="." method="_on_Present_pressed"]
[connection signal="pressed" from="InvestigationButtons/Move" to="." method="_on_Move_pressed"]
[connection signal="timeout" from="update" to="." method="_on_update_timeout"]
[connection signal="pressed" from="CourtRecord/Present" to="." method="_on_PresentEvidence_pressed"]
[connection signal="pressed" from="CourtRecord/Check" to="." method="_on_Check_pressed"]
[connection signal="pressed" from="Choices/Choice1" to="." method="_on_Choices_pressed"]
[connection signal="pressed" from="Choices/Choice2" to="." method="_on_Choices_pressed"]
[connection signal="pressed" from="Choices/Choice3" to="." method="_on_Choices_pressed"]
[connection signal="pressed" from="Choices/Choice4" to="." method="_on_Choices_pressed"]
[connection signal="pressed" from="Chat/Chat1" to="." method="_on_Chats_pressed"]
[connection signal="pressed" from="Chat/Chat2" to="." method="_on_Chats_pressed"]
[connection signal="pressed" from="Chat/Chat3" to="." method="_on_Chats_pressed"]
[connection signal="pressed" from="Chat/Chat4" to="." method="_on_Chats_pressed"]
[connection signal="pressed" from="Moves/Move1" to="." method="_on_Moves_pressed"]
[connection signal="pressed" from="Moves/Move2" to="." method="_on_Moves_pressed"]
[connection signal="pressed" from="Moves/Move3" to="." method="_on_Moves_pressed"]
[connection signal="pressed" from="Moves/Move4" to="." method="_on_Moves_pressed"]
[connection signal="timeout" from="First" to="." method="_on_First_timeout"]
